missing link added

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             </p>
                         </div>
                     </a>
-                    <a href="#c" class="es-products__single" target="_blank">
+                    <a href="https://www.ceneo.pl/150507487" class="es-products__single" target="_blank">
                         <div class="es-products__single--img">
                             <img src="./static/img/anthelios.png" alt="" loading="lazy">
                         </div>
@@ -373,7 +373,7 @@
                         </p>
                     </div>
                 </div>
-                <a href="#c" target="_blank">
+                <a href="https://www.ceneo.pl/150507487" target="_blank">
                     <div class="es-products__single">
                         <div class="es-products__single--img">
                             <img src="./static/img/anthelios.png" alt="" loading="lazy">
